2002-06-14  Junichi Uekawa  <dancer@debian.org>

	* configure.in: 0.0.19.3

	* parameter.c: add ifdef for HAVE_GETOPT_H, and getopt_long
	Thanks to Petter Reinholdtsen <pere@hungry.com>

	* dsh.c (asprintf): add asprintf definition.
	Thanks to Petter Reinholdtsen <pere@hungry.com>
	(getline): copy getline definition from libdshconfig.

	* configure.in: add AC_CHECK_HEDAERS/FUNCS for getopt
	Thanks to Petter Reinholdtsen <pere@hungry.com>

2002-06-13  Junichi Uekawa  <dancer@debian.org>

	* configure.in: 0.0.19.2

	* debian/rules (binary-arch): removed the installman specifics, because 
	the upstream makefile will handle it.

	* Makefile.am (man_MANS): add dsh.1 to man_MANS, and EXTRA_DIST
	Thanks to Petter Reinholdtsen <pere@hungry.com>

	* configure.in: check libdshconfig for open_dshconfig

	* linkedlist.c, parameter.c, dsh.c: #include <config.h> instead of "config.h"

2002-06-12  Junichi Uekawa  <dancer@debian.org>

	* configure.in: version 0.0.19.1

	* autogen.sh: add --force

	* dsh.c (do_echoing_back): add a missing free for buf,
	Thanks to Petter Reinholdtsen <pere@hungry.com>

	* configure.in: version 0.0.19.0

	* Makefile.am: update prinstine-source generator/Debian 

2002-06-01  Junichi Uekawa  <dancer@debian.org>


	* dsh.c (do_execute_with_optional_pipe): use PACKAGE instead of PROGRAM_NAME
	(do_execute_with_optional_pipe): 

	* parameter.c (read_machinelist): 
	* parameter.c (load_configfile): ditto

	* configure.in: add AM_MAINTAINER_MODE

	* dsh.h (DSH_CONF): remove PROGRAM_NAME

2002-05-31  Junichi Uekawa  <dancer@debian.org>

	* configure.in: change version number to 0.0.19pre

	* Makefile.am (../@PACKAGE@_@VERSION@.orig.tar.gz): fix the target not to overwrite pristine upstream tarball.

	* configure.in: fix typo in package name.

	* Makefile.am (dsh_SOURCES): fix Make rule to allow distcheck to succeed.

	* debian/changelog: make it a non-native package.

	* Makefile.am, configure.in, autogen.sh: added
