@@ -24,7 +24,7 @@
 #include <stdio.h>
 #include <string.h>
 #include <unistd.h>
-#include <config.h>
+#include "config.h"
 #include "dsh.h"
 #include "linkedlist.h"
 
